fix shadow to align with bottom of menu

--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -3758,7 +3758,6 @@ canvas {
 
 .navbar {
   position: relative;
-  margin-bottom: 20px;
 }
 
 h1, .h1, header, .intro-text, .intro-heading, .intro-lead-in, .heading{
